Add link to github repo

--- a/20.04.22 - Simulating Circuits/simulating_circuits.ipynb
+++ b/20.04.22 - Simulating Circuits/simulating_circuits.ipynb
@@ -13,7 +13,9 @@
     "* **Christopher J. Wood**\n",
     "* Research Staff Member, Quantum Software Group\n",
     "* IBM Thomas J. Watson Research Center, Yorktown Heights, NY\n",
-    "* *April 22, 2020*"
+    "* *April 22, 2020*\n",
+    "\n",
+    "This notebook can be found at https://github.com/chriseclectic/presentations"
    ]
   },
   {
