Reorder intro slides

--- a/20.04.22 - Simulating Circuits/simulating_circuits.ipynb
+++ b/20.04.22 - Simulating Circuits/simulating_circuits.ipynb
@@ -26,28 +26,6 @@
     }
    },
    "source": [
-    "# Presentation Outline\n",
-    "\n",
-    "* Simulating circuits with Qiskit\n",
-    "* Qiskit quantum_info module\n",
-    "  * Statevector class\n",
-    "  * DensityMatrix class\n",
-    "  * Operator class\n",
-    "  * Clifford class\n",
-    "  * SuperOp class\n",
-    "* Inserting operators into circuits\n",
-    "* Adding noise to circuits\n",
-    "* Simulating measurements and probabilities"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
     "![Circuit Simulation](figures/circuit_spectrum.png)"
    ]
   },
@@ -75,6 +53,55 @@
     "We will demonstrate multiple ways to simulate circuits in Qiskit.\n",
     "\n",
     "The right tool for the job depends on what information we wish to obtain..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Outline\n",
+    "\n",
+    "* Qiskit quantum_info module\n",
+    "  * Statevector class\n",
+    "  * DensityMatrix class\n",
+    "  * Operator class\n",
+    "  * Clifford class\n",
+    "  * SuperOp class\n",
+    "* Inserting operators into circuits\n",
+    "* Adding noise to circuits\n",
+    "* Simulating measurements and probabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<h3>Version Information</h3><table><tr><th>Qiskit Software</th><th>Version</th></tr><tr><td>Qiskit</td><td>0.18.0</td></tr><tr><td>Terra</td><td>0.13.0</td></tr><tr><td>Aer</td><td>0.5.0</td></tr><tr><td>Ignis</td><td>0.3.0</td></tr><tr><td>Aqua</td><td>0.6.5</td></tr><tr><td>IBM Q Provider</td><td>0.6.0</td></tr><tr><th>System information</th></tr><tr><td>Python</td><td>3.7.4 (default, Aug 13 2019, 15:17:50) \n",
+       "[Clang 4.0.1 (tags/RELEASE_401/final)]</td></tr><tr><td>OS</td><td>Darwin</td></tr><tr><td>CPUs</td><td>6</td></tr><tr><td>Memory (Gb)</td><td>32.0</td></tr><tr><td colspan='2'>Wed Apr 22 09:33:06 2020 EDT</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import qiskit.tools.jupyter\n",
+    "%qiskit_version_table"
    ]
   },
   {
@@ -3890,34 +3917,6 @@
    },
    "source": [
     "# Thank you!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<h3>Version Information</h3><table><tr><th>Qiskit Software</th><th>Version</th></tr><tr><td>Qiskit</td><td>0.18.0</td></tr><tr><td>Terra</td><td>0.13.0</td></tr><tr><td>Aer</td><td>0.5.0</td></tr><tr><td>Ignis</td><td>0.3.0</td></tr><tr><td>Aqua</td><td>0.6.5</td></tr><tr><td>IBM Q Provider</td><td>0.6.0</td></tr><tr><th>System information</th></tr><tr><td>Python</td><td>3.7.4 (default, Aug 13 2019, 15:17:50) \n",
-       "[Clang 4.0.1 (tags/RELEASE_401/final)]</td></tr><tr><td>OS</td><td>Darwin</td></tr><tr><td>CPUs</td><td>6</td></tr><tr><td>Memory (Gb)</td><td>32.0</td></tr><tr><td colspan='2'>Wed Apr 22 01:05:41 2020 EDT</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import qiskit.tools.jupyter\n",
-    "%qiskit_version_table"
    ]
   }
  ],
